--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -4,9 +4,67 @@
 #themeSelector.themeA {
   --textColor: black;
   --bgColor: lightgreen;
+  --buttonSearch-bg: blue;
+  --buttonSearch-text: white;
+
 }
 
 #themeSelector.themeB {
   --textColor: white;
   --bgColor: darkblue;
+  --buttonSearch-bg: lightblue;
+  --buttonSearch-text: black;
+}
+
+/* global button definitions */
+
+.buttonGlobal {
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  border-radius: 20px;
+  /* small caps font */
+  font-family: 'Alegreya Sans SC', sans-serif;
+  position: relative;
+  overflow: hidden;
+  border: 0; /* default button style has a border, which we don't need */
+  outline: none;
+  cursor: default;
+}
+/* Default :focus style has an outline, so remove it */
+.buttonGlobal:focus {
+  outline: none;
+}
+/* Here ::after creates a new white object with a circular gradient that can be scaled in and out */
+.buttonGlobal::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background-image: radial-gradient(ellipse, #fff, transparent 10.01%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  transform: scale(10,10);
+  opacity: 0;
+  transition: transform 0.5s, opacity 1s;
+
+}
+/* on hover, grow a little, add box-shadow and brighten background color */
+.buttonGlobal:hover {
+  box-shadow: 0.2rem 0.2rem 4px rgb(90, 90, 90);
+  filter: brightness(120%);
+  transition: scale 0.25s;
+  transform: scale(1.04,1.04);
+  transform-origin: center;
+  mix-blend-mode: multiply;
+}
+
+
+/* sets the ripple up */
+.buttonGlobal:active::after {
+  transform: scale(0,0);
+  opacity: 0.5;
+  transition: 0s;
 }
