added more business logic, created stubs for the front end API access

--- a/client/src/components/ListItem/index.css
+++ b/client/src/components/ListItem/index.css
@@ -24,6 +24,8 @@
 .ListItemDeleteButton {
   background-color: red;
   color: black;
+  margin-bottom: 0.25rem;
+
 }
 .ListItemDescription {
   /* color: green; */
