--- a/client/src/components/Header/index.css
+++ b/client/src/components/Header/index.css
@@ -2,7 +2,9 @@
 .HeaderHeaderBox {
   background-color: var(--bgColor);
   color: var(--textColor);
-  margin-top: 0;
+  font-family: 'Bevan', cursive;
+  font-size: 9vw;
+  margin: 0;
   padding: 1rem;
   display:flex;
   justify-content: space-around;
