--- a/client/src/components/SearchForm/index.css
+++ b/client/src/components/SearchForm/index.css
@@ -1,9 +1,13 @@
 
+.SearchFormBox {
+  background-color: var(--searchBox-bg);
+  color: var(--searchBox-text);
+  padding-top: 1rem;
+
+}
 .SearchFormTitle {
-  color: var(--textColor);
-  background-color: var(--bgColor);
-  margin-top: 1rem;
   margin-bottom: 1rem;
+  margin-left: 1rem;
 }
 .SearchFormButton {
   margin-top: 0.75rem;
@@ -21,7 +25,7 @@
 .SearchFormButton.buttonGlobal:disabled::before {
   font-family: 'Alegreya Sans', sans-serif;
   content:"Fill in title or author before searching";
-  color:black;
+  color: var(--searchBox-text);
   visibility: visible;
   display: block;
   position: absolute;
