wrote api routes and controller file books.js, working on test environment

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -4,9 +4,9 @@
 
 #themeSelector.themeA {
   --textColor: black;
-  --bgColor: lightgreen;
+  --bgColor: #56bd20;
   --bodyBackgroundColor: gray;
-  --navButton-bg: darkblue;
+  --navButton-bg: #044d04;
   --navButton-text: white;
   --themeButton-bg: black;
   --themeButton-text: white;
